refactored packages -- orgainization. added support for oled in micropython metatron. addd support for memmory in micropyhton metatron. removed RElement and respective Vertex/Edge work in mtp3.